@@ -1,3 +1,8 @@
+2010-12-17  Marc Khouzam  <marc.khouzam@ericsson.com>
+
+	* python/py-progspace.c (py_free_pspace): Obtain arch another
+	way to avoid dereferencing a null pointer.
+
 2010-12-12  Stan Shebs  <stan@codesourcery.com>
 
 	* value.c (value_of_internalvar): Add case for trace state
